display orders in admin route

--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "amazona",
+  "name": "ecommerce",
   "type": "module",
   "version": "1.0.0",
-  "description": "Ecommerce website like amazon",
+  "description": "Ecommerce website",
   "main": "index.js",
   "scripts": {
     "start": "nodemon --watch backend --exec node --experimental-modules backend/server.js"
