--- a/package.json
+++ b/package.json
@@ -9,15 +9,10 @@
     "start": "nodemon --watch backend --exec node --experimental-modules backend/server.js"
   },
   "repository": {
-    "type": "git",
-    "url": "git+https://github.com/basir/amazona.git"
+    "type": "git"
   },
   "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/basir/amazona/issues"
-  },
-  "homepage": "https://github.com/basir/amazona#readme",
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "dotenv": "^8.2.0",
